--- a/service.yaml
+++ b/service.yaml
@@ -1,25 +1,30 @@
-name: slack-summarize-chatbot
+name: slack-llm-bot
 message: Summarizer
 image: quay.io/vessl-ai/torch:2.1.0-cuda12.2-r3
 resources:
   cluster: vessl-aws-seoul
   preset: cpu-medium
 import:
-  /app:
-    git: https://github.com/vessl-ai/slack-summarize-chatbot.git
+  /app: git://github.com/vessl-ai/slack-llm-bot.git
 run:
   - command: |
       pnpm install 
       pnpm run start
 env:
-  SERVICE_AUTH_KEY:
-    secret: slackbot-auth-key
-    source: secret
   SLACK_BOT_TOKEN:
     secret: slackbot-token
     source: secret
+  SLACK_SIGNING_SECRET:
+    secret: slack-signing-secret
+    source: secret
   OPENAI_API_KEY:
     secret: openai-api-key
+    source: secret
+  OPENAI_ORGANIZATION_ID:
+    secret: openai-organization-id
+    source: secret
+  OPENAI_PROJECT_ID:
+    secret: openai-project-id
     source: secret
 ports:
   - port: 3000
