--- a/service.yaml
+++ b/service.yaml
@@ -1,6 +1,6 @@
 name: slack-llm-bot
 message: Summarizer
-image: quay.io/vessl-ai/torch:2.1.0-cuda12.2-r3
+image: docker.io/node:lts
 resources:
   cluster: vessl-aws-seoul
   preset: cpu-medium
@@ -8,6 +8,7 @@ import:
   /app: git://github.com/vessl-ai/slack-llm-bot.git
 run:
   - command: |
+      corepack enable pnpm
       pnpm install 
       pnpm run start
 env:
